# Z_Simulations_Nov2022

./: .gitignore  readme.txt
InputData/: userdata.txt
LJC_Code4/: CMakeLists.txt  userdata.txt
LJC_Code4/LCCAdaptive/: CMakeLists.txt  hadaptive.cpp  hadaptive.cpp.bak  hadaptive.h
LJC_Code4/LCCCommon/: CMakeLists.txt  CreateGeoMesh.cpp  CreateGeoMesh.h  IdMaterialsToGIDFiles.cpp  IdMaterialsToGIDFiles.h  Refinements.cpp  Refinements.h  commonJC.cpp  commonJC.cpp.bak  commonJC.h  commonJC.h.bak  myheader.cpp  myheader.h
LJC_Code4/LCCEstimator/: CMakeLists.txt  EEGradLaplacianRecLS.cpp  EEGradLaplacianRecLS.h  EEGradLaplacianRecWLS.cpp  EEGradLaplacianRecWLS.h  EEGradPotentialLaplacianRecLS.cpp  EEGradPotentialLaplacianRecLS.h  EEGradPotentialLaplacianRecWLS.cpp  EEGradPotentialLaplacianRecWLS.h  EEGradPotentialRecLS.cpp  EEGradPotentialRecLS.h  EEGradPotentialRecWLS.cpp  EEGradPotentialRecWLS.h  EEGradientRecLS.cpp  EEGradientRecLS.h  EEGradientRecWLS.cpp  EEGradientRecWLS.h  EELaplacianPotentialRecLS.cpp  EELaplacianPotentialRecLS.h  EELaplacianPotentialRecWLS.cpp  EELaplacianPotentialRecWLS.h  EELaplacianRecLS.cpp  EELaplacianRecLS.h  EELaplacianRecWLS.cpp  EELaplacianRecWLS.h  ErrorEstimator.cpp  ErrorEstimator.h
LJC_Code4/LCCMaterials/: CMakeLists.txt  LCC_poissontime.cpp  LCC_poissontime.h  PoissonEquations.cpp  PoissonEquations.cpp.bak  PoissonEquations.h
LJC_Code4/LCC_Projects/: CMakeLists.txt
LJC_Code4/LCC_Projects/Poisson_H1_GD_Mixeds/: CMakeLists.txt  main.cpp
neopz/Material/REAL/Plasticity/: TPZElastoPlasticMem.cpp
